--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 
         <dependency>
             <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-client</artifactId>
+            <artifactId>hbase-server</artifactId>
             <version>1.2.0</version>
         </dependency>
 
